--- a/readme
+++ b/readme
@@ -2,18 +2,19 @@ Assignment 6 readme File
 
 ------------------------------------------------------------------------
 Student 1: What is your name?
+Eesha Agarwal
 
 
 
 ------------------------------------------------------------------------
 Student 2: What is your name?
-
+Tan Vu
 
 
 ------------------------------------------------------------------------
 How many late days are you using on this assignment?
 (Reminder, you may use at most 1, and that only takes you until 23:59)
-
+0
 
 
 ------------------------------------------------------------------------
@@ -21,6 +22,25 @@ Student 1: What authorized sources of information did you use to
 complete the assignment? COPY THE LIST of authorized sources of
 information given in the "Policies" web page to this section of the
 readme file, and edit it as appropriate.
+The course's lectures.
+
+The course's precepts.
+
+The course's website.
+
+Documents that are referenced directly by the course's website.
+Such documents include the course's lecture slides and precept handouts.
+
+The course's textbooks.
+
+The man pages on the armlab cluster.
+
+The course's current staff members outside of class time through
+meetings.
+
+The course's current staff members outside of class time through Ed.
+
+Current lab teaching assistants through visits to the course labs.
 
 
 
@@ -29,6 +49,25 @@ Student 2: What authorized sources of information did you use to
 complete the assignment? COPY THE LIST of authorized sources of
 information given in the "Policies" web page to this section of the
 readme file, and edit it as appropriate.
+The course's lectures.
+
+The course's precepts.
+
+The course's website.
+
+Documents that are referenced directly by the course's website.
+Such documents include the course's lecture slides and precept handouts.
+
+The course's textbooks.
+
+The man pages on the armlab cluster.
+
+The course's current staff members outside of class time through
+meetings.
+
+The course's current staff members outside of class time through Ed.
+
+Current lab teaching assistants through visits to the course labs.
 
 
 
@@ -43,9 +82,7 @@ unauthorized source may trigger a course penalty, and depending on the
 nature of the interaction, may additionally require the interaction
 being reported to the Committee on Discipline. Write "None" if you used
 no unauthorized sources of information.
-
-
-
+None
 ------------------------------------------------------------------------
 Student 2: What unauthorized sources of information did you use to
 complete the assignment? List any unauthorized sources of information
@@ -57,9 +94,7 @@ unauthorized source may trigger a course penalty, and depending on the
 nature of the interaction, may additionally require the interaction
 being reported to the Committee on Discipline. Write "None" if you used
 no unauthorized sources of information.
-
-
-
+None
 ------------------------------------------------------------------------
 Student 1: What is your assessment of the assignment? Was it helpful?
 Was it fun?
@@ -69,15 +104,16 @@ Was it fun?
 ------------------------------------------------------------------------
 Student 2: What is your assessment of the assignment? Was it helpful?
 Was it fun?
-
-
+It was fun and helpful. The challenge part seemed to have so many potential
+solutions at first but we managed to make none of them work which was funny.
 
 ------------------------------------------------------------------------
 (optional) What information can you provide about your submission that
 will help your grader to grade it in the most favorable light? In
 particular, what bugs are in your submission?
 
-
+We included two approaches we tried to implement with comments in 
+createDataAplus.c and createDataAplus_1.c
 
 ------------------------------------------------------------------------
 What are your sentences from Step 1?
