--- a/readme
+++ b/readme
@@ -2,26 +2,26 @@ Assignment 6 readme File
 
 ------------------------------------------------------------------------
 Student 1: What is your name?
+
 Eesha Agarwal
-
-
 
 ------------------------------------------------------------------------
 Student 2: What is your name?
-Tan Vu
 
+Tan Vu
 
 ------------------------------------------------------------------------
 How many late days are you using on this assignment?
 (Reminder, you may use at most 1, and that only takes you until 23:59)
-0
 
+0
 
 ------------------------------------------------------------------------
 Student 1: What authorized sources of information did you use to
 complete the assignment? COPY THE LIST of authorized sources of
 information given in the "Policies" web page to this section of the
 readme file, and edit it as appropriate.
+
 The course's lectures.
 
 The course's precepts.
@@ -41,14 +41,13 @@ meetings.
 The course's current staff members outside of class time through Ed.
 
 Current lab teaching assistants through visits to the course labs.
-
-
 
 ------------------------------------------------------------------------
 Student 2: What authorized sources of information did you use to
 complete the assignment? COPY THE LIST of authorized sources of
 information given in the "Policies" web page to this section of the
 readme file, and edit it as appropriate.
+
 The course's lectures.
 
 The course's precepts.
@@ -68,8 +67,6 @@ meetings.
 The course's current staff members outside of class time through Ed.
 
 Current lab teaching assistants through visits to the course labs.
-
-
 
 ------------------------------------------------------------------------
 Student 1: What unauthorized sources of information did you use to
@@ -82,7 +79,9 @@ unauthorized source may trigger a course penalty, and depending on the
 nature of the interaction, may additionally require the interaction
 being reported to the Committee on Discipline. Write "None" if you used
 no unauthorized sources of information.
-None
+
+None.
+
 ------------------------------------------------------------------------
 Student 2: What unauthorized sources of information did you use to
 complete the assignment? List any unauthorized sources of information
@@ -94,16 +93,21 @@ unauthorized source may trigger a course penalty, and depending on the
 nature of the interaction, may additionally require the interaction
 being reported to the Committee on Discipline. Write "None" if you used
 no unauthorized sources of information.
-None
+
+None.
+
 ------------------------------------------------------------------------
 Student 1: What is your assessment of the assignment? Was it helpful?
 Was it fun?
 
-
+It was a great assignment -- being able to understand such vulnerabil-
+-ities in systems and programs by attacking them gives me an idea as
+to how to make my own programs less vulnerable.  
 
 ------------------------------------------------------------------------
 Student 2: What is your assessment of the assignment? Was it helpful?
 Was it fun?
+
 It was fun and helpful. The challenge part seemed to have so many potential
 solutions at first but we managed to make none of them work which was funny.
 
@@ -117,10 +121,12 @@ createDataAplus.c and createDataAplus_1.c
 
 ------------------------------------------------------------------------
 What are your sentences from Step 1?
+
 According to 18 U.S. Code 1030, if you were to use a buffer overrun 
 attack to commit fraud or related activity in connection with computers, 
 but did not attempt to cause death and did not knowingly or recklessly 
-cause death, then you could receive a maximum penalty of 20 in prison.
+cause death, then you could receive a maximum penalty of 20 years in 
+prison.
 
 According to 18 U.S. Code 1030, if you were to use a buffer overrun 
 attack to commit fraud or related activity in connection with computers, 
@@ -128,4 +134,5 @@ and attempted to cause death or knowingly or recklessly caused death,
 then you could receive a maximum penalty of life in prison.
 
 Source: https://www.law.cornell.edu/uscode/text/18/1030
+
 ------------------------------------------------------------------------
